--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://raw.githubusercontent.com/JoyceHuang0907/basic-wordshop/main/Make%E5%9F%BA%E7%A4%8E%E8%AA%8D%E8%AD%89Workshop%20(1000%20x%204300%20%E5%83%8F%E7%B4%A0)%20(1).png" alt="Workshop Background">
+        <img src="https://raw.githubusercontent.com/JoyceHuang0907/basic-wordshop/main/Make%E5%9F%BA%E7%A4%8E%E8%AA%8D%E8%AD%89Workshop-nwe.png" alt="Workshop Background">
         <a href="https://form.jotform.com/243511828899471" target="_blank" class="clickable-area"></a>
     </div>
 </body>
