--- a/index.html
+++ b/index.html
@@ -20,18 +20,27 @@
         }
         .clickable-area {
             position: absolute;
+            cursor: pointer;
+        }
+        .area1 {
             left: 82.86%; /* 1657.2 / 2000 * 100% */
             top: 92.98%; /* 6508.4 / 7000 * 100% */
             width: 11.2%; /* 224 / 2000 * 100% */
             height: 1.14%; /* 80 / 7000 * 100% */
-            cursor: pointer;
+        }
+        .area2 {
+            left: 4.57%; /* 91.4 / 2000 * 100% */
+            top: 96.89%; /* 6782.2 / 7000 * 100% */
+            width: 16.52%; /* 330.4 / 2000 * 100% */
+            height: 1.07%; /* 74.8 / 7000 * 100% */
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <img src="https://raw.githubusercontent.com/JoyceHuang0907/basic-wordshop/main/Make%E5%9F%BA%E7%A4%8E%E8%AA%8D%E8%AD%89Workshop-nwe.png" alt="Workshop Background">
-        <a href="https://form.jotform.com/243511828899471" target="_blank" class="clickable-area"></a>
+        <img src="https://raw.githubusercontent.com/JoyceHuang0907/basic-wordshop/main/Make%E5%9F%BA%E7%A4%8E%E8%AA%8D%E8%AD%89Workshop-new02.png" alt="Workshop Background">
+        <a href="https://form.jotform.com/243511828899471" target="_blank" class="clickable-area area1"></a>
+        <a href="https://make.fan/service/2025calendar/" target="_blank" class="clickable-area area2"></a>
     </div>
 </body>
 </html>
