--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
       width: 16.52%; /* 330.4 / 2000 * 100% */
       height: 1.07%; /* 74.8 / 7000 * 100% */
     }
+    .area3 {
+      left: 83.76%; /* 1675.2 / 2000 * 100% */
+      top: 95.61%;  /* 6693 / 7000 * 100% */
+      width: 9.72%; /* 194.4 / 2000 * 100% */
+      height: 2.78%; /* 194.4 / 7000 * 100% */
+    }
   </style>
 </head>
 <body>
@@ -42,6 +48,7 @@
     <img src="https://raw.githubusercontent.com/JoyceHuang0907/basic-wordshop/main/Make%E5%9F%BA%E7%A4%8E%E8%AA%8D%E8%AD%89Workshop-new-04.png" alt="Workshop Background">
     <a href="https://form.jotform.com/243511828899471" target="_blank" class="clickable-area area1"></a>
     <a href="https://make.fan/service/2025calendar/" target="_blank" class="clickable-area area2"></a>
+    <a href="https://form.jotform.com/243511828899471" target="_blank" class="clickable-area area3"></a>
   </div>
 </body>
 </html>
